fix to prevent layout shift with navigation grid from login

--- a/client/src/Nav.module.css
+++ b/client/src/Nav.module.css
@@ -1,7 +1,7 @@
 .navContainer {
   width: 80%;
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(8, minmax(0, 1fr));
   grid-gap: 15px;
   margin: auto;
   margin-top: 20px;
